--- a/index.html
+++ b/index.html
@@ -39,6 +39,64 @@
     </div>
   </section>
 
+  <!-- 🌊 Wavy Divider -->
+<div class="relative -mb-1">
+  <svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg" class="w-full h-auto">
+    <path fill="#ffffff" fill-opacity="1" d="M0,224L60,197.3C120,171,240,117,360,117.3C480,117,600,171,720,181.3C840,192,960,160,1080,149.3C1200,139,1320,149,1380,154.7L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+  </svg>
+</div>
+
+<!-- 🛠️ OUR SERVICES SECTION -->
+<section id="services" class="bg-white py-20">
+  <div class="container mx-auto px-4 text-center">
+    <h2 class="text-4xl font-bold mb-4 text-gray-800">OUR SERVICES</h2>
+    <p class="max-w-2xl mx-auto text-gray-600 mb-12 text-lg">
+      We help financial institutions navigate the digital landscape with innovative solutions 
+      that enhance member experiences, streamline operations, and drive sustainable growth.
+    </p>
+
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- 🧮 Performance Management -->
+      <div class="bg-gradient-to-b from-pink-50 to-purple-50 border rounded-xl shadow-sm p-6 text-left hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold mb-3 text-pink-600">Performance Management</h3>
+        <p class="text-gray-600 mb-4 text-sm leading-relaxed">
+          A strategic approach to aligning individual and team performance with organizational goals.
+          It involves setting clear objectives, providing continuous feedback, conducting assessments,
+          and recognizing high performance to foster employee growth and efficiency.
+        </p>
+        <a href="#" class="inline-block text-pink-600 font-semibold hover:text-pink-800">
+          Learn More →
+        </a>
+      </div>
+
+      <!-- 👥 Members Portal -->
+      <div class="bg-gradient-to-b from-pink-50 to-purple-50 border rounded-xl shadow-sm p-6 text-left hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold mb-3 text-pink-600">Members Portal</h3>
+        <p class="text-gray-600 mb-4 text-sm leading-relaxed">
+          Real-time account updates, loan tracking, fixed deposit monitoring, loan calculator, 
+          financial documentation downloads, and employee services — all in one secure portal.
+        </p>
+        <a href="#" class="inline-block text-pink-600 font-semibold hover:text-pink-800">
+          Learn More →
+        </a>
+      </div>
+
+      <!-- 📩 SMS Communication -->
+      <div class="bg-gradient-to-b from-pink-50 to-purple-50 border rounded-xl shadow-sm p-6 text-left hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold mb-3 text-pink-600">SMS Communication</h3>
+        <p class="text-gray-600 mb-4 text-sm leading-relaxed">
+          FIKIWA SMS System enables bulk message sending and scheduled messaging to keep members 
+          informed and engaged with important financial updates.
+        </p>
+        <a href="#" class="inline-block text-pink-600 font-semibold hover:text-pink-800">
+          Learn More →
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
   <!-- 🧾 Footer -->
   <footer class="bg-white border-t py-4">
     <div class="container mx-auto text-center text-gray-600 text-sm">
