Add top info bar with working hours and contact email

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Centrino Technologies</title>
+  <!-- 🕒 Top Info Bar -->
+<div class="w-full bg-pink-600 text-white text-sm">
+  <div class="container mx-auto px-4 py-2 flex flex-col md:flex-row justify-between items-center gap-2 text-center md:text-left">
+    <div>
+      Mon–Fri: 8:30 AM – 5:30 PM &nbsp; | &nbsp; Saturday: 8:30 AM – 1:00 PM
+    </div>
+    <div>
+      <a href="mailto:info@centrino.co.ke" class="underline hover:text-pink-200">info@centrino.co.ke</a>
+    </div>
+  </div>
+</div>
+
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
